# practicing-c-and-cpp

./: README.md  chess_board.c  important_c_tips.md  print_unicode.c
cmake-notes/: README.md
example1_simple_graphics/: Makefile  Makefile_advanced  README.md  circle  circle.c
example2_simple_opengl/: CMakeLists.txt  README.md
example2_simple_opengl/src/: main.cpp
examples/: basic_pointers.c  chess_board.c  playing_with_pointers  playing_with_pointers.c
simple_graphics/: circle.c
